fixed scrollbar shifting navbar

--- a/css/full.css
+++ b/css/full.css
@@ -10,6 +10,10 @@ body {
   margin-bottom:40px;
 }
 
+body::-webkit-scrollbar{
+  display: none;
+}
+
 .content {
   margin-bottom:200px;
 }
@@ -134,6 +138,7 @@ h3 {
   background-size: 100%;
   box-shadow: 10px 10px 30px 0px #000;
   min-width: 1000px;
+
 }
 
 .slot {
@@ -167,3 +172,25 @@ h3 {
   text-shadow: 4px 4px 5px #000;
 }
 
+.twitterbox {
+  height: 800px;
+  overflow-y: scroll;
+  float:left;
+}
+
+.twitterbox::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.3);
+  background-color: #F5F5F5;
+}
+
+.twitterbox::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.twitterbox::-webkit-scrollbar-thumb
+{
+	background-color: #1f1f1f;
+}
